<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding_layout_lr"
    android:paddingTop="@dimen/padding_layout_top"
    android:paddingRight="@dimen/padding_layout_lr">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="20th September 2019" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_layout_top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvEmpty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvMild"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mild" />

            <TextView
                android:id="@+id/tvModerate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/moderate" />

            <TextView
                android:id="@+id/tvSevere"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/severe" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/symptomsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_layout_top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_symptoms" />

        <ImageButton
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/btnAddSymptoms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btn_add_symptoms_margin_left"
            app:srcCompat="@drawable/ic_add_box_green_24dp"
            android:background="@null" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edNewSymptom"
        android:layout_width="@dimen/ed_input_symptom_width"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/widget_margin_top"
        android:inputType="text"
        android:lines="1"
        android:imeOptions="actionDone"
        android:visibility="invisible"
        android:hint="@string/input_new_symptom" />

</LinearLayout>